<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Header -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="24dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filtros"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <ImageButton
                    android:id="@+id/btnClose"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@android:drawable/ic_menu_close_clear_cancel"/>
            </LinearLayout>

            <!-- Progress Bar -->
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <!-- Error Message -->
            <TextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginBottom="16dp"
                android:visibility="gone"/>

            <!-- Ordenamiento -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ordenar_por"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupOrdering"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                app:selectionRequired="false"
                android:layout_marginBottom="24dp"
               >

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipOrderName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_a_z"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:backgroundTint="@color/md_light_primary"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipOrderNameDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_z_a"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:backgroundTint="@color/md_light_primary"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipOrderReleased"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_s_antiguos"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:backgroundTint="@color/md_light_primary"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipOrderReleasedDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_s_recientes"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:backgroundTint="@color/md_light_primary"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipOrderRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mejor_valorados"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:backgroundTint="@color/md_light_primary"/>
            </com.google.android.material.chip.ChipGroup>

            <!-- Plataformas -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plataformas"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupPlatforms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="false"
                android:layout_marginBottom="24dp"/>

            <!-- Géneros -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/g_neros"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupGenres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="false"
                android:layout_marginBottom="24dp"/>

            <!-- Spacer para empujar los botones hacia abajo -->
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <TextView
        android:id="@+id/tvErrorFiltros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="error al cargar los filtros"
        android:textSize="16sp"
        android:textColor="@color/md_error"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:id="@+id/button_filters_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvError"
        android:backgroundTint="@color/md_error"
        android:textColor="@color/md_onPrimary"
        android:text="@string/reintentar"
        android:visibility="invisible"
        />
    <!-- Botones fijos en la parte inferior -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="?android:attr/windowBackground"
        android:elevation="8dp">

        <Button
            android:id="@+id/btnClearFilters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limpiar"
            android:layout_marginEnd="8dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <Button
            android:id="@+id/btnApplyFilters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aplicar"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>