<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activitys.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:menu="@menu/top_app_bar_menu"
        app:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/toolbar_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/circular_background"
        android:clipToOutline="true"
        android:elevation="16dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="@id/topAppBar"
        app:layout_constraintEnd_toEndOf="@id/topAppBar"
        app:layout_constraintTop_toTopOf="@id/topAppBar" />
    <Button
        android:id="@+id/button_filtrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Filtrar"
        android:backgroundTint="@color/md_light_primary"
        android:textColor="@color/md_onPrimary"
        app:layout_constraintTop_toTopOf="@id/topAppBar"
        app:layout_constraintBottom_toBottomOf="@id/topAppBar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="10dp"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/games_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="26dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="26dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_al_cargar_los_juegos"
        android:textSize="16sp"
        android:textColor="@color/md_error"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:id="@+id/button_games_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvError"
        android:backgroundTint="@color/md_error"
        android:textColor="@color/md_onPrimary"
        android:text="@string/reintentar"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>